logs/stomp_moveit/build.make.021.log.stderr
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_planner.cpp: In member function ‘virtual bool stomp_moveit::StompPlanner::solve(planning_interface::MotionPlanDetailedResponse&)’:
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_planner.cpp:305:33: error: ‘class std::vector<std::shared_ptr<robot_trajectory::RobotTrajectory> >’ has no member named ‘trajectory’; did you mean ‘vector’?
   for(int i=0;i<res.trajectory_.trajectory.size();i++)
                                 ^~~~~~~~~~
                                 vector
make[2]: *** [CMakeFiles/stomp_moveit.dir/src/stomp_planner.cpp.o] Error 1
make[1]: *** [CMakeFiles/stomp_moveit.dir/all] Error 2
make: *** [all] Error 2
